<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.quarkus.ts.jdk.specific</groupId>
    <artifactId>parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Quarkus JDK Specifics TS: Parent</name>
    <properties>
        <maven.compiler.parameters>true</maven.compiler.parameters>
        <maven.compiler.release>17</maven.compiler.release>
        <maven-checkstyle-plugin.version>3.6.0</maven-checkstyle-plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <compiler-plugin.version>3.14.0</compiler-plugin.version>
        <surefire-plugin.version>3.5.3</surefire-plugin.version>
        <failsafe-plugin.version>3.5.2</failsafe-plugin.version>
        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
        <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
        <quarkus.platform.version>999-SNAPSHOT</quarkus.platform.version>
        <quarkus-plugin.version>${quarkus.platform.version}</quarkus-plugin.version>
        <quarkus.qe.framework.version>1.6.0</quarkus.qe.framework.version>
        <formatter-maven-plugin.version>2.26.0</formatter-maven-plugin.version>
        <impsort-maven-plugin.version>1.6.2</impsort-maven-plugin.version>
        <xml-format-maven-plugin.version>4.1.0</xml-format-maven-plugin.version>
        <checkstyle.version>10.21.4</checkstyle.version>
        <profile.id>jvm</profile.id>
        <!-- Default values for format -->
        <src.format.goal>format</src.format.goal>
        <src.sort.goal>sort</src.sort.goal>
        <xml.format.goal>xml-format</xml.format.goal>
        <!-- Failsafe inclusions/exclusions rules -->
        <include.tests>**/*IT.java</include.tests>
        <exclude.openshift.tests>**/OpenShift*IT.java</exclude.openshift.tests>
        <exclude.serverless.openshift.tests>**/Serverless*OpenShift*IT.java</exclude.serverless.openshift.tests>
        <exclude.operator.openshift.tests>**/Operator*OpenShift*IT.java</exclude.operator.openshift.tests>
        <exclude.quarkus.cli.tests>**/QuarkusCli*IT.java</exclude.quarkus.cli.tests>
        <exclude.quarkus.devmode.tests>no</exclude.quarkus.devmode.tests>
        <quarkus.native.builder-image>quay.io/quarkus/ubi-quarkus-mandrel-builder-image:23.1-java21</quarkus.native.builder-image>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>${quarkus.platform.artifact-id}</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.quarkus.qe</groupId>
                <artifactId>quarkus-test-parent</artifactId>
                <version>${quarkus.qe.framework.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>io.quarkus.qe</groupId>
            <artifactId>quarkus-test-containers</artifactId>
            <version>${quarkus.qe.framework.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.quarkus.qe</groupId>
            <artifactId>quarkus-test-openshift</artifactId>
            <version>${quarkus.qe.framework.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-junit5</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${failsafe-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>io.quarkus.qe</groupId>
                <artifactId>quarkus-test-preparer</artifactId>
                <version>${quarkus.qe.framework.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-pom-mojo</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-maven-plugin</artifactId>
                <version>${quarkus-plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                    <jvmArgs>--enable-preview</jvmArgs>
                    <source>${maven.compiler.release}</source>
                    <target>${maven.compiler.release}</target>
                </configuration>
                <executions>
                    <execution>
                        <id>build</id>
                        <goals>
                            <goal>build</goal>
                            <goal>generate-code</goal>
                            <goal>generate-code-tests</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler-plugin.version}</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <compilerArgs>--enable-preview</compilerArgs>
                    <source>${maven.compiler.release}</source>
                    <target>${maven.compiler.release}</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>--enable-preview</argLine>
                    <systemPropertyVariables>
                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                        <configuration>
                            <includes>
                                <include>${include.tests}</include>
                            </includes>
                            <excludes>
                                <exclude>${exclude.openshift.tests}</exclude>
                                <exclude>${exclude.serverless.openshift.tests}</exclude>
                                <exclude>${exclude.operator.openshift.tests}</exclude>
                                <exclude>${exclude.quarkus.cli.tests}</exclude>
                                <exclude>${exclude.quarkus.devmode.tests}</exclude>
                            </excludes>
                            <systemPropertyVariables>
                                <profile.id>${profile.id}</profile.id>
                                <postgresql.latest.image>docker.io/library/postgres:15.4</postgresql.latest.image>
                            </systemPropertyVariables>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <trimStackTrace>false</trimStackTrace>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>${formatter-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>${src.format.goal}</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <artifactId>quarkus-ide-config</artifactId>
                        <groupId>io.quarkus</groupId>
                        <version>${quarkus.platform.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <configFile>eclipse-format.xml</configFile>
                    <lineEnding>LF</lineEnding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>au.com.acegi</groupId>
                <artifactId>xml-format-maven-plugin</artifactId>
                <version>${xml-format-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>${xml.format.goal}</goal>
                        </goals>
                        <configuration>
                            <indentSize>4</indentSize>
                            <excludes>
                                <!-- Exclude files from target folder -->
                                <exclude>**/target/**/*.xml</exclude>
                                <!-- Exclude Quarkus main repository -->
                                <exclude>**/quarkus/**/*.xml</exclude>
                                <!-- Exclude .idea -->
                                <exclude>.idea/**</exclude>
                                <!-- Exclude .github -->
                                <exclude>.github/**</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-checkstyle-plugin.version}</version>
                <configuration>
                    <configLocation>checkstyle.xml</configLocation>
                    <inputEncoding>UTF-8</inputEncoding>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <linkXRef>true</linkXRef>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <!-- exclude preview as latest checkstyle 3.3.0 not support unnamed patterns abd variables -->
                    <excludes>**/preview/**</excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${checkstyle.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>JDK17</id>
            <activation>
                <jdk>17</jdk>
            </activation>
            <modules>
                <module>jdk17/jakarta-rest-panache</module>
                <module>jdk17/graphql</module>
            </modules>
        </profile>
        <profile>
            <id>JDK21</id>
            <activation>
                <jdk>21</jdk>
            </activation>
            <modules>
                <module>jdk21/resteasy-reactive-jackson</module>
                <module>jdk21/qute</module>
            </modules>
            <properties>
                <maven.compiler.release>21</maven.compiler.release>
                <quarkus.native.builder-image>quay.io/quarkus/ubi-quarkus-mandrel-builder-image:23.1-java21</quarkus.native.builder-image>
            </properties>
        </profile>
        <profile>
            <id>native</id>
            <activation>
                <property>
                    <name>native</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <executions>
                            <execution>
                                <configuration>
                                    <systemPropertyVariables>
                                        <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
                                        <quarkus.native.enabled>true</quarkus.native.enabled>
                                        <quarkus.native.container-build>${quarkus.native.container-build}</quarkus.native.container-build>
                                        <quarkus.native.native-image-xmx>${quarkus.native.native-image-xmx}</quarkus.native.native-image-xmx>
                                        <quarkus.native.builder-image>${quarkus.native.builder-image}</quarkus.native.builder-image>
                                    </systemPropertyVariables>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
            <properties>
                <profile.id>native</profile.id>
                <quarkus.native.container-build>true</quarkus.native.container-build>
                <quarkus.native.native-image-xmx>4g</quarkus.native.native-image-xmx>
                <exclude.quarkus.devmode.tests>**/*DevMode*IT.java</exclude.quarkus.devmode.tests>
                <quarkus.native.additional-build-args>-J--enable-preview</quarkus.native.additional-build-args>
            </properties>
        </profile>
        <profile>
            <!-- You need to be connected to an OpenShift instance to activate this profile! -->
            <id>openshift</id>
            <activation>
                <property>
                    <name>openshift</name>
                </property>
            </activation>
            <properties>
                <exclude.openshift.tests>no</exclude.openshift.tests>
            </properties>
        </profile>
        <profile>
            <id>redhat-registry</id>
            <activation>
                <property>
                    <name>openshift</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <configuration>
                            <systemPropertyVariables>
                                <ts.redhat.registry.enabled>true</ts.redhat.registry.enabled>
                                <!-- Product Services -->
                                <rhsso.74.image>registry.redhat.io/rh-sso-7/sso74-openshift-rhel8</rhsso.74.image>
                                <postgresql.12.image>registry.redhat.io/rhscl/postgresql-12-rhel7</postgresql.12.image>
                                <mariadb.103.image>registry.redhat.io/rhscl/mariadb-103-rhel7</mariadb.103.image>
                                <amq-streams.image>registry.redhat.io/amq7/amq-streams-kafka-27-rhel7</amq-streams.image>
                                <amq-streams.version>1.7.0</amq-streams.version>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>validate-format</id>
            <activation>
                <property>
                    <name>validate-format</name>
                </property>
            </activation>
            <properties>
                <src.format.goal>validate</src.format.goal>
                <src.sort.goal>check</src.sort.goal>
                <xml.format.goal>xml-check</xml.format.goal>
            </properties>
        </profile>
    </profiles>
</project>
